# crc64fast-nvme

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  crc64nvme.h
.github/workflows/: rust.yml
benches/: benchmark.rs
fuzz/: Cargo.toml  README.md
fuzz/src/: main.rs
src/: lib.rs  table.rs
src/pclmulqdq/: aarch64.rs  mod.rs  x86.rs  x86_64.rs
src/pclmulqdq/x86/: mod.rs
src/pclmulqdq/x86_64/: mod.rs  vpclmulqdq.rs
