[package]
name = "crc64fast-nvme"
version = "1.0.1"
authors = ["The TiKV Project Developers", "Don MacAskill"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["crc", "crc64", "simd", "checksum", "nvme"]
categories = ["algorithms", "command-line-utilities", "encoding", "hardware-support"]
repository = "https://github.com/awesomized/crc64fast-nvme"
description = "SIMD accelerated CRC-64/NVME checksum calculation"
readme = "README.md"

# Note: Rust 1.70 upgraded LLVM version to 16 (in particular https://reviews.llvm.org/D131047)
# Before that, the compiler is unwilling to generate the PMULL2 instruction on AArch64.
rust-version = "1.70.0"

[dependencies]
crc = "3"

[dev-dependencies]
crc = "3"
proptest = "1"
criterion = "0.5"
rand = "0.8"

[features]
pmull = [] # deprecated, no longer have any effect.
fake-simd = []

[[bench]]
name = 'benchmark'
harness = false

[profile.release]
strip = true
